[package]
name = "states-ui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "38d3833c83ff4f3ed3864bdb45aa92e54285e8a1", features = [
    "bevy_dev_tools",
] }

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
