[package]
name = "states-ui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/MiniaczQ/bevy", rev = "89e74723c796d7f16ef8d0b8f1d7e442b300898f", features = [
    "bevy_dev_tools",
] }

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
