[package]
name = "states-ui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "70a38ab1f69a810b60074fc290c7278c21596061", features = [
    "bevy_dev_tools",
] }

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
